# guitar-scale-app

./: README.md  app.py  pyproject.toml
