[tool.poetry]
name = "guitar-scale"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.44.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
